Control Stores Identification Completed with Combined Identification Function

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a1861191",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "4  WOOLWORTHS  OLDER SINGLES/COUPLES       Mainstream  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7314b496",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7c28b6c1",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0a26861c",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b56004e1",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "813a58c1",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "272"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f8ab17d6",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ef95f080",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "4  WOOLWORTHS  OLDER SINGLES/COUPLES       Mainstream    2018-11  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b214a5a5",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
        "9          1.023810  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "a3ff7f62",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "aa24849a",
    "metadata": {},
    "outputs": [],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "189cfa14",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "afdf25cd",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
        "87         88        1340.514286         125.714286              1.217688"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "b86ede76",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "4          5         819.957143          93.000000              1.255987"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "d7ee0341",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
        "4          1.021739  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "6aa363d5",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "8a12d97d",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1114,7 @@
     "        avg_corr = (corr_sales + corr_customers + corr_txn) / 3\n",
     "\n",
     "        avg_corr = avg_corr.drop(store) #removing correlation done with itself\n",
-    "        results[store] = avg_corr.sort_values(ascending=False).head(3) #top 3 match\n",
+    "        results[store] = avg_corr.sort_values(ascending=False)  # if printing only top 3 match    .head(3)\n",
     "\n",
     "    return results"
    ]
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "ae6087fe",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1155,7 @@
     "\n",
     "        distances = distances.drop(store)\n",
     "\n",
-    "        results[store] = distances.nsmallest(3)\n",
+    "        results[store] = distances  # if printing only top 3 match    .nsmallest(3)\n",
     "\n",
     "    return results"
    ]
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "9f8aab9a",
    "metadata": {},
    "outputs": [
@@ -1194,20 +1194,20 @@
        " Name: 88, dtype: float64}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = corr_calculation()\n",
+    "result = corr_calculation() #if printing only top 3 best matches for each\n",
     "\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "f09434ca",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1231,7 @@
        " dtype: float64}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,6 +1247,8 @@
    "id": "e628a64a",
    "metadata": {},
    "source": [
+    "> Implication -\n",
+    "\n",
     "This data implies the following:\n",
     "\n",
     "- Some stores have similar trends but operate at different scales\n",
@@ -1262,18 +1264,88 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0f04ed1c",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8cba9adc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def combined_match():\n",
+    "\n",
+    "    final_results = {}\n",
+    "\n",
+    "    mag_results = mag_distance()\n",
+    "\n",
+    "    corr_results = corr_calculation()\n",
+    "\n",
+    "    for store in trial_stores:\n",
+    "        corr_series = corr_results[store]\n",
+    "        dist_series = mag_results[store]\n",
+    "        \n",
+    "\n",
+    "        common = corr_series.index.intersection(dist_series.index)\n",
+    "\n",
+    "        corr_series = corr_series.loc[common]\n",
+    "        dist_series = dist_series.loc[common]\n",
+    "\n",
+    "        # simple combined score\n",
+    "        score = corr_series / (dist_series + 1)\n",
+    "\n",
+    "        final_results[store] = score.sort_values(ascending=False).head(3)\n",
+    "\n",
+    "    return final_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3c956aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{77: STORE_NBR\n",
+       " 17     0.454956\n",
+       " 115    0.418680\n",
+       " 145    0.412345\n",
+       " dtype: float64,\n",
+       " 86: STORE_NBR\n",
+       " 138    0.562638\n",
+       " 114    0.449255\n",
+       " 155    0.418083\n",
+       " dtype: float64,\n",
+       " 88: STORE_NBR\n",
+       " 237    0.276731\n",
+       " 201    0.254705\n",
+       " 203    0.216966\n",
+       " dtype: float64}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "control_stores = combined_match()\n",
+    "\n",
+    "control_stores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78263360",
+   "metadata": {},
+   "source": [
+    "Control stores have been identified for each trial stores (in descending order of acceptance):\n",
+    "\n",
+    "Trial store 77 : {17, 115, 145}\n",
+    "\n",
+    "Trial store 86 : {138, 114, 155} \n",
+    "\n",
+    "Trial store 88 : {237, 201, 203}"
+   ]
   }
  ],
  "metadata": {
