--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -784,7 +784,9 @@
    "id": "dad57284",
    "metadata": {},
    "source": [
-    "> The trial ran from February 2019 to June 2019. A total of 5 full months."
+    "> The trial ran from February 2019 to April 2019. A total of 3 full months.\n",
+    "\n",
+    "> The data however contains transaction dates from July 2018 to June 2019. A total of 12 months. "
    ]
   },
   {
@@ -1540,6 +1542,110 @@
     "  - Excellent sales revenue tracking (best of all three pairs)\n",
     "  - Strong customer count alignment\n",
     "- Lower score reflects magnitude differences, but visual validation confirms suitability\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3ddc51",
+   "metadata": {},
+   "source": [
+    "## Impact Analysis\n",
+    "\n",
+    "The trial ran from February 2019 to April 2019. A total of 3 full months.\n",
+    "\n",
+    "The data however contains transaction dates from July 2018 to June 2019. A total of 12 months. \n",
+    "\n",
+    "--- \n",
+    "**Q> Did trial stores outperform in sales during the period? Any difference?**\n",
+    "\n",
+    "**Q> What drove the difference? Factors.**\n",
+    "\n",
+    "**Q> Was trial successful? On which basis? Do every store meet criteria?**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0943e3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{77: {'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  887         77    2019-02          235.0              45         45   \n",
+       "  888         77    2019-03          278.5              50         55   \n",
+       "  889         77    2019-04          263.5              47         48   \n",
+       "  \n",
+       "       TXN_PER_CUSTOMER  \n",
+       "  887          1.000000  \n",
+       "  888          1.100000  \n",
+       "  889          1.021277  ,\n",
+       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  1944        167    2019-02          160.6              35         37   \n",
+       "  1945        167    2019-03          193.0              44         45   \n",
+       "  1946        167    2019-04          185.1              42         42   \n",
+       "  \n",
+       "        TXN_PER_CUSTOMER  \n",
+       "  1944          1.057143  \n",
+       "  1945          1.022727  \n",
+       "  1946          1.000000  },\n",
+       " 86: {'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  984         86    2019-02          913.2             107        138   \n",
+       "  985         86    2019-03         1026.8             115        140   \n",
+       "  986         86    2019-04          848.2             105        126   \n",
+       "  \n",
+       "       TXN_PER_CUSTOMER  \n",
+       "  984          1.289720  \n",
+       "  985          1.217391  \n",
+       "  986          1.200000  ,\n",
+       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  1596        138    2019-02          748.6              90        111   \n",
+       "  1597        138    2019-03          940.6             106        138   \n",
+       "  1598        138    2019-04          834.2             106        128   \n",
+       "  \n",
+       "        TXN_PER_CUSTOMER  \n",
+       "  1596          1.233333  \n",
+       "  1597          1.301887  \n",
+       "  1598          1.207547  },\n",
+       " 88: {'trial':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  1008         88    2019-02         1370.2             124        153   \n",
+       "  1009         88    2019-03         1477.2             134        169   \n",
+       "  1010         88    2019-04         1439.4             128        162   \n",
+       "  \n",
+       "        TXN_PER_CUSTOMER  \n",
+       "  1008          1.233871  \n",
+       "  1009          1.261194  \n",
+       "  1010          1.265625  ,\n",
+       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "  2754        237    2019-02         1404.8             126        157   \n",
+       "  2755        237    2019-03         1208.2             119        134   \n",
+       "  2756        237    2019-04         1204.6             120        135   \n",
+       "  \n",
+       "        TXN_PER_CUSTOMER  \n",
+       "  2754          1.246032  \n",
+       "  2755          1.126050  \n",
+       "  2756          1.125000  }}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison_pair = {77:167, 86:138, 88:237}\n",
+    "\n",
+    "data_during_trial = {}\n",
+    "\n",
+    "for trial, control in comparison_pair.items():\n",
+    "    data_during_trial[trial] = {\n",
+    "        'trial': summary[(summary['STORE_NBR'] == trial) & (summary['YEAR_MONTH'].between('2019-02', '2019-04'))],\n",
+    "        'control': summary[(summary['STORE_NBR'] == control) & (summary['YEAR_MONTH'].between('2019-02', '2019-04'))]\n",
+    "    }\n",
+    "data_during_trial"
    ]
   }
  ],
