Data Structure for Impact Analysis Improved

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "e3d8ba6e",
    "metadata": {},
    "outputs": [
@@ -1567,70 +1567,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "ddd8733d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>YEAR_MONTH</th>\n",
+       "      <th>SALES_REVENUE</th>\n",
+       "      <th>CUSTOMER_COUNT</th>\n",
+       "      <th>TOTAL_TXN</th>\n",
+       "      <th>TXN_PER_CUSTOMER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-07</td>\n",
+       "      <td>206.9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1.061224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-08</td>\n",
+       "      <td>176.1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1.023810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>278.8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.050847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>188.1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.022727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-11</td>\n",
+       "      <td>192.6</td>\n",
+       "      <td>46</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1.021739</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       "0          1    2018-07          206.9              49         52   \n",
+       "1          1    2018-08          176.1              42         43   \n",
+       "2          1    2018-09          278.8              59         62   \n",
+       "3          1    2018-10          188.1              44         45   \n",
+       "4          1    2018-11          192.6              46         47   \n",
+       "\n",
+       "   TXN_PER_CUSTOMER  \n",
+       "0          1.061224  \n",
+       "1          1.023810  \n",
+       "2          1.050847  \n",
+       "3          1.022727  \n",
+       "4          1.021739  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_trial_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "0943e3b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{77: {'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  887         77    2019-02          235.0              45         45   \n",
-       "  888         77    2019-03          278.5              50         55   \n",
-       "  889         77    2019-04          263.5              47         48   \n",
-       "  \n",
+       "{'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       " 887         77    2019-02          235.0              45         45   \n",
+       " 888         77    2019-03          278.5              50         55   \n",
+       " 889         77    2019-04          263.5              47         48   \n",
+       " \n",
+       "      TXN_PER_CUSTOMER  \n",
+       " 887          1.000000  \n",
+       " 888          1.100000  \n",
+       " 889          1.021277  ,\n",
+       " 'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
+       " 1944        167    2019-02          160.6              35         37   \n",
+       " 1945        167    2019-03          193.0              44         45   \n",
+       " 1946        167    2019-04          185.1              42         42   \n",
+       " \n",
        "       TXN_PER_CUSTOMER  \n",
-       "  887          1.000000  \n",
-       "  888          1.100000  \n",
-       "  889          1.021277  ,\n",
-       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  1944        167    2019-02          160.6              35         37   \n",
-       "  1945        167    2019-03          193.0              44         45   \n",
-       "  1946        167    2019-04          185.1              42         42   \n",
-       "  \n",
-       "        TXN_PER_CUSTOMER  \n",
-       "  1944          1.057143  \n",
-       "  1945          1.022727  \n",
-       "  1946          1.000000  },\n",
-       " 86: {'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  984         86    2019-02          913.2             107        138   \n",
-       "  985         86    2019-03         1026.8             115        140   \n",
-       "  986         86    2019-04          848.2             105        126   \n",
-       "  \n",
-       "       TXN_PER_CUSTOMER  \n",
-       "  984          1.289720  \n",
-       "  985          1.217391  \n",
-       "  986          1.200000  ,\n",
-       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  1596        138    2019-02          748.6              90        111   \n",
-       "  1597        138    2019-03          940.6             106        138   \n",
-       "  1598        138    2019-04          834.2             106        128   \n",
-       "  \n",
-       "        TXN_PER_CUSTOMER  \n",
-       "  1596          1.233333  \n",
-       "  1597          1.301887  \n",
-       "  1598          1.207547  },\n",
-       " 88: {'trial':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  1008         88    2019-02         1370.2             124        153   \n",
-       "  1009         88    2019-03         1477.2             134        169   \n",
-       "  1010         88    2019-04         1439.4             128        162   \n",
-       "  \n",
-       "        TXN_PER_CUSTOMER  \n",
-       "  1008          1.233871  \n",
-       "  1009          1.261194  \n",
-       "  1010          1.265625  ,\n",
-       "  'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       "  2754        237    2019-02         1404.8             126        157   \n",
-       "  2755        237    2019-03         1208.2             119        134   \n",
-       "  2756        237    2019-04         1204.6             120        135   \n",
-       "  \n",
-       "        TXN_PER_CUSTOMER  \n",
-       "  2754          1.246032  \n",
-       "  2755          1.126050  \n",
-       "  2756          1.125000  }}"
+       " 1944          1.057143  \n",
+       " 1945          1.022727  \n",
+       " 1946          1.000000  }"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,12 +1714,32 @@
     "\n",
     "data_during_trial = {}\n",
     "\n",
-    "for trial, control in comparison_pair.items():\n",
-    "    data_during_trial[trial] = {\n",
-    "        'trial': summary[(summary['STORE_NBR'] == trial) & (summary['YEAR_MONTH'].between('2019-02', '2019-04'))],\n",
-    "        'control': summary[(summary['STORE_NBR'] == control) & (summary['YEAR_MONTH'].between('2019-02', '2019-04'))]\n",
+    "final_comparison_data = {}\n",
+    "\n",
+    "def prepare_data_comparison(trial_store, control_store, summary, pre_trial_data, trial_start = '2019-02', trial_end = '2019-04'):\n",
+    "\n",
+    "    result = {}\n",
+    "\n",
+    "    trial_period_data = summary[(summary['YEAR_MONTH'].between(trial_start, trial_end)) & (summary['STORE_NBR'].isin([trial_store, control_store]))].copy()\n",
+    "\n",
+    "    result = {\n",
+    "        'pre-trial':{\n",
+    "            'trial': pre_trial_data[pre_trial_data['STORE_NBR'] == trial_store].sort_values('YEAR_MONTH'),\n",
+    "            'control': pre_trial_data[pre_trial_data['STORE_NBR'] == control_store].sort_values('YEAR_MONTH')\n",
+    "        },\n",
+    "        'trial_period':{\n",
+    "            'trial': trial_period_data[trial_period_data['STORE_NBR'] == trial_store].sort_values('YEAR_MONTH'),\n",
+    "            'control': trial_period_data[trial_period_data['STORE_NBR'] == control_store].sort_values('YEAR_MONTH')\n",
+    "        }\n",
     "    }\n",
-    "data_during_trial"
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "for trial, control in comparison_pair.items():\n",
+    "    final_comparison_data[trial] = prepare_data_comparison(trial, control, summary, pre_trial_data)\n",
+    "\n",
+    "final_comparison_data[77]['trial_period']"
    ]
   }
  ],
