Initial Analysis Using Lift Value Completed

--- a/script_analysis/task_02/data_profiling.ipynb
+++ b/script_analysis/task_02/data_profiling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a1861191",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "4  WOOLWORTHS  OLDER SINGLES/COUPLES       Mainstream  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7314b496",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7c28b6c1",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0a26861c",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b56004e1",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "813a58c1",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "272"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f8ab17d6",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ef95f080",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "4  WOOLWORTHS  OLDER SINGLES/COUPLES       Mainstream    2018-11  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b214a5a5",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "9          1.023810  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a3ff7f62",
    "metadata": {},
    "outputs": [],
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "aa24849a",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "189cfa14",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "afdf25cd",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
        "87         88        1340.514286         125.714286              1.217688"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b86ede76",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
        "4          5         819.957143          93.000000              1.255987"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d7ee0341",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
        "4          1.021739  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6aa363d5",
    "metadata": {},
    "outputs": [],
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "8a12d97d",
    "metadata": {},
    "outputs": [],
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ae6087fe",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "9f8aab9a",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1220,7 @@
        " Name: 88, Length: 270, dtype: float64}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f09434ca",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
        " Length: 270, dtype: float64}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "8cba9adc",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "3c956aad",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1373,7 @@
        " dtype: float64}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "274e1aff",
    "metadata": {},
    "outputs": [],
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e3d8ba6e",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ddd8733d",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1666,7 @@
        "4          1.021739  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,36 +1677,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "0943e3b5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'trial':      STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       " 887         77    2019-02          235.0              45         45   \n",
-       " 888         77    2019-03          278.5              50         55   \n",
-       " 889         77    2019-04          263.5              47         48   \n",
-       " \n",
-       "      TXN_PER_CUSTOMER  \n",
-       " 887          1.000000  \n",
-       " 888          1.100000  \n",
-       " 889          1.021277  ,\n",
-       " 'control':       STORE_NBR YEAR_MONTH  SALES_REVENUE  CUSTOMER_COUNT  TOTAL_TXN  \\\n",
-       " 1944        167    2019-02          160.6              35         37   \n",
-       " 1945        167    2019-03          193.0              44         45   \n",
-       " 1946        167    2019-04          185.1              42         42   \n",
-       " \n",
-       "       TXN_PER_CUSTOMER  \n",
-       " 1944          1.057143  \n",
-       " 1945          1.022727  \n",
-       " 1946          1.000000  }"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg sales in 77 before : $242.71428571428572\t during trial: $259.0\n",
+      "Avg sales in 167 before: $189.22857142857143\t during trial: $179.5666666666667\n",
+      "\n",
+      "Avg sales in 86 before : $874.2642857142856\t during trial: $929.4\n",
+      "Avg sales in 138 before: $903.2857142857143\t during trial: $841.1333333333333\n",
+      "\n",
+      "Avg sales in 88 before : $1340.5142857142857\t during trial: $1428.9333333333334\n",
+      "Avg sales in 237 before: $1338.4285714285713\t during trial: $1272.5333333333333\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -1716,14 +1704,18 @@
     "\n",
     "final_comparison_data = {}\n",
     "\n",
-    "def prepare_data_comparison(trial_store, control_store, summary, pre_trial_data, trial_start = '2019-02', trial_end = '2019-04'):\n",
+    "trial_start = '2019-02'\n",
+    "trial_end = '2019-04'\n",
+    "\n",
+    "trial_period_data = summary[(summary['YEAR_MONTH'].between(trial_start , trial_end )) & (summary['STORE_NBR'].isin(comparison_pair.keys()))].copy()\n",
+    "\n",
+    "\n",
+    "def prepare_data_comparison(trial_store, control_store, pre_trial_data, trial_period_data):\n",
     "\n",
     "    result = {}\n",
     "\n",
-    "    trial_period_data = summary[(summary['YEAR_MONTH'].between(trial_start, trial_end)) & (summary['STORE_NBR'].isin([trial_store, control_store]))].copy()\n",
-    "\n",
     "    result = {\n",
-    "        'pre-trial':{\n",
+    "        'pre_trial':{\n",
     "            'trial': pre_trial_data[pre_trial_data['STORE_NBR'] == trial_store].sort_values('YEAR_MONTH'),\n",
     "            'control': pre_trial_data[pre_trial_data['STORE_NBR'] == control_store].sort_values('YEAR_MONTH')\n",
     "        },\n",
@@ -1737,10 +1729,88 @@
     "\n",
     "\n",
     "for trial, control in comparison_pair.items():\n",
-    "    final_comparison_data[trial] = prepare_data_comparison(trial, control, summary, pre_trial_data)\n",
-    "\n",
-    "final_comparison_data[77]['trial_period']"
+    "    final_comparison_data[trial] = prepare_data_comparison(trial, control, pre_trial_data, trial_period_data)\n",
+    "    \n",
+    "    print(f'Avg sales in {trial} before : ${pre_trial_data[pre_trial_data['STORE_NBR'] == trial]['SALES_REVENUE'].mean()}\\t during trial: ${trial_period_data[trial_period_data['STORE_NBR'] == trial]['SALES_REVENUE'].mean()}')\n",
+    "    print(f'Avg sales in {control} before: ${pre_trial_data[pre_trial_data['STORE_NBR'] == control]['SALES_REVENUE'].mean()}\\t during trial: ${summary[(summary['STORE_NBR'] == control) & (summary['YEAR_MONTH'].between(trial_start, trial_end))]['SALES_REVENUE'].mean()}\\n')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb281c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Store 77:\n",
+      "Baseline\t$53.49\n",
+      "Gap\t\t$79.43\n",
+      "Lift\t\t13.71%\n",
+      "\n",
+      "Store 86:\n",
+      "Baseline\t$-29.02\n",
+      "Gap\t\t$88.27\n",
+      "Lift\t\t12.98%\n",
+      "\n",
+      "Store 88:\n",
+      "Baseline\t$2.09\n",
+      "Gap\t\t$156.40\n",
+      "Lift\t\t11.53%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = {}\n",
+    "gap = {}\n",
+    "lift = {}\n",
+    "\n",
+    "for trial, control in comparison_pair.items():\n",
+    "\n",
+    "    baseline[trial] = (\n",
+    "        pre_trial_data[pre_trial_data['STORE_NBR'] == trial]['SALES_REVENUE'].mean()\n",
+    "        - pre_trial_data[pre_trial_data['STORE_NBR'] == control]['SALES_REVENUE'].mean()\n",
+    "    )\n",
+    "\n",
+    "    gap[trial] = (\n",
+    "        trial_period_data[trial_period_data['STORE_NBR'] == trial]['SALES_REVENUE'].mean()\n",
+    "        - summary[(summary['STORE_NBR'] == control)\n",
+    "                  & (summary['YEAR_MONTH'].between(trial_start, trial_end))]['SALES_REVENUE'].mean()\n",
+    "    )\n",
+    "\n",
+    "    lift[trial] = ((gap[trial] - baseline[trial]) /\n",
+    "         pre_trial_data[pre_trial_data['STORE_NBR'] == control]['SALES_REVENUE'].mean())* 100\n",
+    "\n",
+    "    print(\n",
+    "        f\"Store {trial}:\\n\"\n",
+    "        f\"Baseline\\t${baseline[trial]:.2f}\\n\"\n",
+    "        f\"Gap\\t\\t${gap[trial]:.2f}\\n\"\n",
+    "        f\"Lift\\t\\t{lift[trial]:.2f}%\\n\"\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77900028",
+   "metadata": {},
+   "source": [
+    "### Initial Summary:\n",
+    "\n",
+    "All three stores show **11-15% lift**.\n",
+    "Trial appears succcessful across the board.\n",
+    "\n",
+    "- Q > Reasons for lift?\n",
+    "- Q > Statistically significant?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc3dde5b",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
